# chess-engine

./: CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
ChessEngine/: CMakeLists.txt
ChessEngine/src/: Bitboard.hpp  Chess.hpp  DataStructures.hpp  Evaluator.cpp  Evaluator.hpp  MagicData.hpp  MagicGenerator.cpp  Move.hpp  MoveGenerator.cpp  MoveGenerator.hpp  Piece.hpp  PieceTables.hpp  Position.cpp  Position.hpp  PregeneratedMoves.cpp  PregeneratedMoves.hpp  Searcher.cpp  Searcher.hpp  SortedMoves.cpp  SortedMoves.hpp  SquareAliases.hpp  Transposition.cpp  Transposition.hpp  Utils.cpp  Utils.hpp  Zobrist.cpp  Zobrist.hpp
Client/: CMakeLists.txt
Client/src/: Authorization.hpp  Curl.cpp  Curl.hpp  GameHandler.cpp  GameHandler.hpp  IncomingChallengeHandler.cpp  IncomingChallengeHandler.hpp  Logger.hpp  Main.cpp  OutgoingChallengeHandler.cpp  OutgoingChallengeHandler.hpp  SharedState.cpp  SharedState.hpp  StreamHandler.cpp  StreamHandler.hpp
Game/: CMakeLists.txt
Game/src/: ChessRenderer.cpp  ChessRenderer.hpp  DisplayConstants.hpp  GameManager.cpp  GameManager.hpp  Graphics.hpp  IMouseListener.hpp  InputHandler.cpp  InputHandler.hpp  Main.cpp  Player.cpp  Player.hpp  Renderer.cpp  Renderer.hpp  Texture.cpp  Texture.hpp  Window.cpp  Window.hpp
